--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <body>
         <header>
           <h1>
-            Analyse de la Jubventus lors des trois dernières saisons
+            Analyse de la Juventus lors des trois dernières saisons
           </h1>
           <div>Texte introductif</div>
         </header>
