--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <title>Projet_ | INF8808</title>
 
         <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="assets/tooltip.css">
         <link rel="stylesheet" href="assets/typography.css">
 
       </head>
