--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://michelless1.github.io/INF8808_Project/src/index.html">
+<meta http-equiv="refresh" content="0; url=https://michelless1.github.io/src/index.html">
