essai de merge avec master

--- a/src/index.html
+++ b/src/index.html
@@ -3,84 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Description" content="Code pour le Projet de INF8808.">
-        <title>Projet_ | INF8808</title>
-
+        <meta name="Description" content="Code pour projet de INF8808.">
+        <title>projet | INF8808</title>
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <link rel="stylesheet" href="assets/style.css">
-        <link rel="stylesheet" href="assets/tooltip.css">
-        <link rel="stylesheet" href="assets/typography.css">
 
       </head>
 
       <body>
         <header>
-          <h1>
-            Analyse de la Juventus lors des trois dernières saisons
-          </h1>
-          <div>Texte introductif</div>
+            <h1>
+              Masses salariales vs résultats de chaque match
+            </h1>
+            <h2>
+              Pour chaque saison
+            </h2>
         </header>
         <main>
-          <div class="viz-container">
-            <h2>
-              Analyse offensive
-            </h2>
-            <div class="graph radarchart" id="chart-off">
-              <svg class="chart-off-svg"></svg>
-            </div>
-            <div>
-              Voici un bilan de la saison où Andrea Pirlo a été entraîneur de la Juventus (2020 - 2021), comparativement à la saison précédente (2019 - 2020) et à la saison actuelle (2021 - 2022).
-              <ul>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de buts par match (<b>Gls/90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de points par match (<b>Pts/90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de passes complétées (<b>Cmp%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de passes reçues (<b>Rec%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de pourcentage de dribbles complétés (<b>Drib%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de pourcentage de tirs cadrés (<b>SoT%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de nombre de buts expectés par match (<b>xG/90</b>).</li>
-              </ul>
-            </div>
+          <div class='graph'>
+            <svg id='bubble-chart1'>
+            </svg>
+            <svg id='bubble-chart2'>
+            </svg>
+            <svg id='bubble-chart3'>
+            </svg>
           </div>
-
-          <div class="viz-container">
-            <h2>
-              Analyse défensive
-            </h2>
-            <div class="graph radarchart" id="chart-def">
-              <svg class="chart-def-svg"></svg>
-            </div>
-            <div>
-              Voici le bilan pour les statistiques défensives comparativement aux saisons avant et après.
-              <ul>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de buts accordés expectés (<b>xGA</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre d'interceptions par match (<b>Int90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de <i>tackles</i> réussis (<b>Tkl%</b>).</li>
-                <li><span class="third-rank">3e rang</span> dans la catégorie de pourcentage de mises en pression réussies (<b>Press%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de matchs blancs (<b>CS%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage d'arrêts (<b>Save%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de buts par match (<b>GA90</b>).</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="viz-container">
-            <h2>
-              Analyse effective
-            </h2>
-             <span>Texte explicatif</span> <!-- Ou dans petit point info -->
-            <div class="graph scatter" id="chart-eff">
-              <svg class="chart-eff-svg"></svg>
-            </div>
-          </div>
-
-          <div class="viz-container">
-            <h2>
-              Classsement dans la série A
-            </h2>
-            <div class="graph bumpchart" id="chart-rank">
-              <svg class="chart-rank-svg"></svg>
-            </div>
-          </div>
-
         </main>
         <script src="https://d3js.org/d3.v5.js"></script>
         <script type="module" src="index.js"></script>
