complete bubble chart merged

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,19 @@
               <svg class="chart-rank-svg"></svg>
             </div>
           </div>
-
+          <div class="viz-container">
+            <h2>
+              Masses salariales vs résultats de chaque match
+            </h2>
+            <div class='graphbubblechart'>
+              <svg id='bubble-chart1'>
+              </svg>
+              <svg id='bubble-chart2'>
+              </svg>
+              <svg id='bubble-chart3'>
+              </svg>
+            </div>
+          </div>
         </main>
         <script src="https://d3js.org/d3.v5.js"></script>
         <script type="module" src="index.js"></script>
