--- a/src/index.html
+++ b/src/index.html
@@ -66,12 +66,12 @@
             <h2>
               Masses salariales vs résultats de chaque match
             </h2>
-            <div class='graphbubblechart'>
-              <svg id='bubble-chart1'>
+            <div class='graph scatterplot' id="chart-eff">
+              <svg id='chart-eff-svg1'>
               </svg>
-              <svg id='bubble-chart2'>
+              <svg id='chart-eff-svg2'>
               </svg>
-              <svg id='bubble-chart3'>
+              <svg id='chart-eff-svg3'>
               </svg>
             </div>
           </div>
