--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
           </div>
 
           <div class="page" id="intro">
-            <div>
+            <div class="background"></div>
+            <div id="intro-text">
               La Juventus est un club de soccer professionnel italien évoluant en série A. 
               C'est l'équipe la plus titrée d'Italie et l'une des plus titrées au monde. La 
               série A quant à elle est le championnat d'Italie de soccer regroupant les vingt 
