--- a/src/index.html
+++ b/src/index.html
@@ -49,16 +49,30 @@
             </div>
           </div>
 
+          <div class="page" id="intro">
+            <div id="intro-text-2">
+              <h2>
+                Analyse offensive
+              </h2>
+              Évaluer une équipe selon ses statistiques offensives peut donner une première 
+              idée de la performance de celle-ci. C’est ce que ces trois visualisations de 
+              données nous apportent. Sept statistiques ont été sélectionnées pour dresser 
+              un portrait sur la performance offensive de l’équipe. Il est possible de voir 
+              la description de la statistique en question en passant la souris dessus. Les 
+              statistiques moyennes des sept premières équipes de la saison sont aussi 
+              disponibles comme référence. Ainsi, il est possible de comparer chacune des 
+              statistiques avec la moyenne pour donner une idée de où se situe l’équipe.
+            </div>
+            <div class="background-black"></div>
+          </div>
+
           <!-- VIZ 1 -->
           <div class="page">
-            <h2>
-              Analyse offensive
-            </h2>
             <div class="graph radarchart" id="chart-off">
               <svg class="chart-off-svg"></svg>
             </div>
 
-            <div>
+            <!-- <div>
               Voici un bilan de la saison où Andrea Pirlo a été entraîneur de la Juventus (2020 - 2021), comparativement à la saison précédente (2019 - 2020) et à la saison actuelle (2021 - 2022).
               <ul>
                 <li><span class="first-rank">1er rang</span> dans la catégorie de buts par match (<b>Gls/90</b>).</li>
@@ -69,7 +83,7 @@
                 <li><span class="first-rank">1er rang</span> dans la catégorie de pourcentage de tirs cadrés (<b>SoT%</b>).</li>
                 <li><span class="first-rank">1er rang</span> dans la catégorie de nombre de buts expectés par match (<b>xG/90</b>).</li>
               </ul>
-            </div>
+            </div> -->
           </div>
 
           <!-- VIZ 2 -->
