continuation arriere plans

--- a/src/index.html
+++ b/src/index.html
@@ -138,27 +138,28 @@
           </div>
 
           <!-- VIZ 4 -->
-          <div class="page">
-            <div class="viz-container">
+          <div class="page" id="intro">
+            <div id="intro-text-4">
               <h2>
                 Classsement dans la série A
               </h2>
-              <div>
-                Les valeurs des statistiques offensives et défensives peuvent suggérer une hausse ou
-                 une baisse de la performance selon qu’elles augmentent ou baissent par rapport aux 
-                 saisons précédentes. Cependant, malgré la croissance ou la décroissance des statistiques, 
-                 on pourrait considérer que la performance globale de la Juventus a été constante si elle 
-                 a su maintenir son rang dans le classement de la série A. Pour l’expliquer de manière plus 
-                 claire, des statistiques en baisse ne veulent pas forcément dire que l’équipe a été moins 
-                 performante, cela peut plutôt vouloir dire que l’environnement a été plus compétitif. 
-                 Ainsi, la visualisation ci-dessous représente les données de classement de certaines 
-                 équipes de la série A (dont la Juventus) et leur évolution au fil des saisons. Il se lit 
-                 et s’interprète aisément en suivant les lignes qui indiquent l’évolution d’une équipe.
-                  Il faut noter que le classement pour la saison 2021-2022 date de mars 2022.
-              </div>
-              <div class="graph bumpchart" id="chart-rank">
-                <svg class="chart-rank-svg"></svg>
-              </div>
+              Les valeurs des statistiques offensives et défensives peuvent suggérer une hausse ou
+              une baisse de la performance selon qu’elles augmentent ou baissent par rapport aux 
+              saisons précédentes. Cependant, malgré la croissance ou la décroissance des statistiques, 
+              on pourrait considérer que la performance globale de la Juventus a été constante si elle 
+              a su maintenir son rang dans le classement de la série A. Pour l’expliquer de manière plus 
+              claire, des statistiques en baisse ne veulent pas forcément dire que l’équipe a été moins 
+              performante, cela peut plutôt vouloir dire que l’environnement a été plus compétitif. 
+              Ainsi, la visualisation ci-dessous représente les données de classement de certaines 
+              équipes de la série A (dont la Juventus) et leur évolution au fil des saisons. Il se lit 
+              et s’interprète aisément en suivant les lignes qui indiquent l’évolution d’une équipe.
+               Il faut noter que le classement pour la saison 2021-2022 date de mars 2022.
+            </div>
+            <div id="background-6"></div>
+          </div>
+          <div class="page" id="chart-rank">
+            <div class="graph bumpchart">
+              <svg class="chart-rank-svg"></svg>
             </div>
           </div>
           
