--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
               disponibles comme référence. Ainsi, il est possible de comparer chacune des 
               statistiques avec la moyenne pour donner une idée de où se situe l’équipe.
             </div>
-            <div class="background-black"></div>
+            <div class="background-off"></div>
           </div>
 
           <!-- VIZ 1 -->
@@ -71,61 +71,37 @@
             <div class="graph radarchart" id="chart-off">
               <svg class="chart-off-svg"></svg>
             </div>
+          </div>
 
-            <!-- <div>
-              Voici un bilan de la saison où Andrea Pirlo a été entraîneur de la Juventus (2020 - 2021), comparativement à la saison précédente (2019 - 2020) et à la saison actuelle (2021 - 2022).
-              <ul>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de buts par match (<b>Gls/90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de points par match (<b>Pts/90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de passes complétées (<b>Cmp%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de passes reçues (<b>Rec%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de pourcentage de dribbles complétés (<b>Drib%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de pourcentage de tirs cadrés (<b>SoT%</b>).</li>
-                <li><span class="first-rank">1er rang</span> dans la catégorie de nombre de buts expectés par match (<b>xG/90</b>).</li>
-              </ul>
-            </div> -->
+          <div class="page" id="intro">
+            <div class="background-def"></div>
+            <div id="intro-text-2">
+              <h2>
+                Analyse défensive
+              </h2>
+              Les trois prochaines visualisations de données portent sur les statistiques défensives 
+              de Juventus lors des trois dernières saisons. Tout comme dans la section précédente, 
+              ept statistiques ont été sélectionnées pour dresser un portrait sur la performance 
+              défensive de l’équipe. Il est possible de voir la description de la statistique en 
+              question en passant la souris dessus. Les statistiques moyennes des sept premières 
+              équipes de la saison sont aussi disponibles comme référence. Ainsi, il est possible de 
+              comparer chacune des statistiques avec la moyenne pour donner une idée de où se situe 
+              l’équipe.
+            </div>
           </div>
 
           <!-- VIZ 2 -->
           <div class="page">
-            <h2>
-              Analyse défensive
-            </h2>
             <div class="graph radarchart" id="chart-def">
               <svg class="chart-def-svg"></svg>
             </div>
-
-            <div>
-              Voici le bilan pour les statistiques défensives comparativement aux saisons avant et après.
-              <ul>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de buts accordés expectés (<b>xGA</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre d'interceptions par match (<b>Int90</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de <i>tackles</i> réussis (<b>Tkl%</b>).</li>
-                <li><span class="third-rank">3e rang</span> dans la catégorie de pourcentage de mises en pression réussies (<b>Press%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage de matchs blancs (<b>CS%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de pourcentage d'arrêts (<b>Save%</b>).</li>
-                <li><span class="second-rank">2e rang</span> dans la catégorie de nombre de buts par match (<b>GA90</b>).</li>
-              </ul>
-            </div>
           </div>
 
-          <!-- VIZ 3 -->
-          <div class="page">
-            <div class="viz-container">
+          <div class="page" id="intro">
+            <div id="intro-text-2">
               <h2>
                 Masses salariales vs résultats de chaque match
               </h2>
-              <div class='graph scatterplot' id="chart-eff">
-                <svg id='chart-eff-svg1'>
-                </svg>
-                <svg id='chart-eff-svg2'>
-                </svg>
-                <svg id='chart-eff-svg3'>
-                </svg>
-              </div>
-            </div>
-
-            <div>
               La performance globale d’une équipe est aussi influencée par des données effectives.
               Ces trois visualisations de données dressent un portrait de la potentielle relation entre
               la masse salariale moyenne des joueurs selon leur temps de jeu pour une partie et la performance
@@ -135,6 +111,39 @@
               salariale moyenne des joueurs pour une partie influence positivement ou négativement
               la performance de l’équipe, et donc, la performance globale de chacune des saisons.
             </div>
+            <div class="background-masse-salariale"></div>
+          </div>
+
+          <!-- VIZ 3 -->
+          <div class="page">
+            <div class="viz-container">
+              
+              <div class='graph scatterplot' id="chart-eff">
+                <svg id='chart-eff-svg1'>
+                </svg>
+                <svg id='chart-eff-svg2'>
+                </svg>
+                <svg id='chart-eff-svg3'>
+                </svg>
+              </div>
+            </div>
+          </div>
+
+          <div class="page" id="intro">
+            <div id="intro-text-2">
+              <h2>
+                Analyse défensive
+              </h2>
+              Évaluer une équipe selon ses statistiques offensives peut donner une première 
+              idée de la performance de celle-ci. C’est ce que ces trois visualisations de 
+              données nous apportent. Sept statistiques ont été sélectionnées pour dresser 
+              un portrait sur la performance offensive de l’équipe. Il est possible de voir 
+              la description de la statistique en question en passant la souris dessus. Les 
+              statistiques moyennes des sept premières équipes de la saison sont aussi 
+              disponibles comme référence. Ainsi, il est possible de comparer chacune des 
+              statistiques avec la moyenne pour donner une idée de où se situe l’équipe.
+            </div>
+            <div class="background-off"></div>
           </div>
 
           <!-- VIZ 4 -->
