--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               on a voulu savoir quelle a été la meilleure saison de Juventus durant les trois
               dernières années. Nous avons donc comparé la saison 2021 en série A de l’équipe
               Juventus, menée par l'entraîneur Andrea Pirlo, avec les saisons 2020 et 2022
-              de cette même équipe à l’aide de visualisations de données. À travers ceux-ci,
+              de cette même équipe à l’aide de visualisations de données. À travers celles-ci,
               nous pourrons analyser la performance de l’équipe et des joueurs lors des 
               trois dernières saisons de la Série A. <br> <br>
 
@@ -146,7 +146,8 @@
               Ainsi, la visualisation ci-dessous représente les données de classement de certaines 
               équipes de la série A (dont la Juventus) et leur évolution au fil des saisons. Il se lit 
               et s’interprète aisément en suivant les lignes qui indiquent l’évolution d’une équipe.
-               Il faut noter que le classement pour la saison 2021-2022 date de mars 2022.
+               Il faut noter que le classement pour la saison 2021-2022 date de mars 2022. <br> <br>
+               [Tip pour la visualisation : Passer la souris sur un rang permet d'avoir le nombre de points.]
             </div>
             <div id="background-6"></div>
           </div>
